--- a/index.html
+++ b/index.html
@@ -66,29 +66,30 @@
 
             Toyota R&D <br>
             Summer Co-op <br>
-            May – Aug 2019 <br> <br>
+            May – Aug 2019 <br>
                 ● Developed map-matching algorithm using curvature of GPS trajectory to improve location accuracy for
                 automated driving
                 ● Built interface to generate and validate scenario files used to simulate automated driving under different
                 conditions
 
-
+            <br><br>
 
             UMTRI (UofM Transportation Research Institute) <br>
             Research Assistant <br>
-            May – Aug 2018 <br><br>
+            May – Aug 2018 <br>
                 ● Co-authored a literature review on haptic feedback in vehicles to assess ADAS systems
                 ● Provided guidance and answered questions about using softwares as an instructional assistant during
                 two-week Human Factors Engineering Short Course
                 ● Analyzed data on the usability of human-machine interfaces in vehicles
 
-
+            <br><br>
             S.M. Wu Manufacturing Research Center <br>
             Research Assistant <br>
-            Jun – Aug 2017 <br><br> <br>
+            Jun – Aug 2017 <br>
                 ● Manufactured silicone arteries and veins for doctors to practice aneurysm surgery
                 ● Modeled experiment setups in Solidworks to support presentations of findings to lab members
             
+        <br><br>
 
         leadership <br>
         Society of Women Engineers <br>
@@ -109,7 +110,7 @@
         Video Game Portfolio <br>
         Jan – Apr 2020 <br>
         built with: C# and <a href="https://unity.com/">Unity Game Engine</a>
-        built three games: remastered Legend of Zelda, mini game, collaborative game
+        built three games: remastered Legend of Zelda, mini game, collaborative game <br><br>
         
         EZscan <br>
         June 2019 <br>
@@ -128,7 +129,7 @@
 
         <br><br>
         interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
-        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!)
+        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!) <br>
     </p>
 
     <br style="clear:both" />
