--- a/index.html
+++ b/index.html
@@ -68,26 +68,26 @@
             Summer Co-op <br>
             May – Aug 2019 <br>
                 ● Developed map-matching algorithm using curvature of GPS trajectory to improve location accuracy for
-                automated driving
+                automated driving <br>
                 ● Built interface to generate and validate scenario files used to simulate automated driving under different
-                conditions
+                conditions <br>
 
             <br><br>
 
             UMTRI (UofM Transportation Research Institute) <br>
             Research Assistant <br>
             May – Aug 2018 <br>
-                ● Co-authored a literature review on haptic feedback in vehicles to assess ADAS systems
+                ● Co-authored a literature review on haptic feedback in vehicles to assess ADAS systems <br>
                 ● Provided guidance and answered questions about using softwares as an instructional assistant during
-                two-week Human Factors Engineering Short Course
-                ● Analyzed data on the usability of human-machine interfaces in vehicles
+                two-week Human Factors Engineering Short Course <br>
+                ● Analyzed data on the usability of human-machine interfaces in vehicles <br>
 
             <br><br>
             S.M. Wu Manufacturing Research Center <br>
             Research Assistant <br>
             Jun – Aug 2017 <br>
-                ● Manufactured silicone arteries and veins for doctors to practice aneurysm surgery
-                ● Modeled experiment setups in Solidworks to support presentations of findings to lab members
+                ● Manufactured silicone arteries and veins for doctors to practice aneurysm surgery <br>
+                ● Modeled experiment setups in Solidworks to support presentations of findings to lab members <br>
             
         <br><br>
 
