--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         Video Game Portfolio <br>
         Jan – Apr 2020 <br>
-        built with: C# and Unity Game Engine
+        built with: C# and Unity Game Engine <br>
         built three games: remastered Legend of Zelda, mini game, collaborative game <br><br>
         
         EZscan <br>
