--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <a href="#about me">about me</a>
     <a href="#experience">experience</a>
+    <a href="#leadership">leadership</a>
     <a href="#projects">projects</a>
     <a href="#skills_and_interests">skills & interests</a>
     <a href="#contact">contact</a>
@@ -90,7 +91,12 @@
                 ● Modeled experiment setups in Solidworks to support presentations of findings to lab members <br>
             
         <br><br>
+    </p>
 
+    <br style="clear:both" />
+
+    <p>
+        <span class="section_header" id="leadership">leadership <br><br> </span>
         leadership <br>
         Society of Women Engineers <br>
         Sep 2017 – Apr 2020 <br>
