--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </div>
 
 <div id="scroll_down">
-    <button id="scroll_button">
-        <span id="arrow">╲╱</span>
+    <button id="scroll_button">╲╱
+        <!-- <span id="arrow">╲╱</span> -->
         <!-- <span id="arrow_text">filler text for height lol</span> -->
     </button>
 </div>
