--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
@@ -8,7 +9,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <head>
-    <title>Deanna</title>
+    <title>Deanna Shih</title>
     <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="icon" href="pig.png">
 </head>
@@ -20,9 +21,9 @@
     </div>
 
     <a href="#about me">about me</a>
+    <a href="#projects">projects</a>
     <a href="#experience">experience</a>
     <a href="#leadership">leadership</a>
-    <a href="#projects">projects</a>
     <a href="#skills_and_interests">skills & interests</a>
     <a href="#contact">contact</a>
 </nav>
