--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
 
     <a href="#about me">about me</a>
+    <a href="#skills">skills</a>
     <a href="#projects">projects</a>
-    <a href="#skills_and_interests">skills & interests</a>
     <a href="#contact">contact</a>
 </nav>
 </div>
@@ -58,8 +58,6 @@
     
     <!-- clear the float to prevent cascading images -->
     <br style="clear:both" />
-
-    <img src="profilepic.jpg" class="workpic"></img>
     
     <p>
         <span class="section_header" id="projects">projects <br><br> </span>
