--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <img src="profilepic.jpg" class="profilepic" ></img>
     <p>
-        <span class="section_header" id="about me">about me <br><br> </span>
+        <span class="section_header" id="about me">hi there! <br><br> </span>
 
         hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
