--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         I'm currently looking for full-time software engineering roles. 
         I have work experience in the area of driver-assistance systems.
         Additionally, I am interested in video game development and machine learning. <br><br>
-        Please contact me at deannajs@umich.edu (or use the form at the bottom) if you would like to get in touch! :)
     </p>
     
     <!-- clear the float to prevent cascading images -->
@@ -118,7 +117,9 @@
         <input type="submit" value="Send Email!">
     </form> -->
 
-
+    <footer>
+        © Deanna Shih 2021
+    </footer>
 
 </body>
 
