--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <footer>
         © Deanna Shih 2021
         <img src="heart.gif"/>
+        <img src="pig.gif"/>
     </footer>
 
 </body>
