--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
 <!-- Load JavaScript -->
@@ -20,7 +20,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#about me">about me</a>
+    <a href="#about me" id="">about me</a>
     <a href="#skills">skills</a>
     <a href="#projects">projects</a>
     <a href="#contact">contact</a>
