--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
 <!-- Load JavaScript -->
@@ -58,6 +58,20 @@
     <!-- clear the float to prevent cascading images -->
     <br style="clear:both" />
     
+        <p>
+        <span class="section_header" id="skills">skills & interests<br><br> </span>
+        skills:
+        relevant coursework: video game development, machine learning, web systems, operating systems, computer security <br>
+        programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
+        software: Unity, Solidworks <br>
+
+        <br><br>
+        interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
+        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!) <br>
+    </p>
+
+
+    <br style="clear:both" />
     <p>
         <span class="section_header" id="projects">projects <br><br> </span>
         Personal Website <br>
@@ -73,20 +87,6 @@
         June 2019 <br>
         built with: swift <br>
         a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet
-    </p>
-
-    <br style="clear:both" />
-
-    <p>
-        <span class="section_header" id="skills_and_interests">skills & interests<br><br> </span>
-        skills:
-        relevant coursework: video game development, machine learning, web systems, operating systems, computer security <br>
-        programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
-        software: Unity, Solidworks <br>
-
-        <br><br>
-        interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
-        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!) <br>
     </p>
 
     <br style="clear:both" />
