--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
     <p>
         <span class="section_header" id="about me">hi there! <br><br> </span>
 
-        hi there! My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
-        I'm currently looking for full-time software engineering roles. 
-        I have work experience in the area of driver-assistance systems.
-        Additionally, I am interested in video game development and machine learning. <br><br>
+        I am interested in video game development and machine learning. <br><br>
     </p>
     
     <!-- clear the float to prevent cascading images -->
