section header font size

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <br style="clear:both" />
     
         <p>
-        <span class="section_header" id="skills">skills & interests<br><br> </span>
+        <span class="section_header" id="skills">skills<br><br> </span>
         skills:
         relevant coursework: video game development, machine learning, web systems, operating systems, computer security <br>
         programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
