remove navbar for now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="pig.png">
 </head>
 
-<div id="navbar">
+<!-- <div id="navbar">
 <nav>
     <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
@@ -25,7 +25,7 @@
     <a href="#projects">projects</a>
     <a href="#contact">contact</a>
 </nav>
-</div>
+</div> -->
 
 <div class="banner">
     <span id="name"> DEANNA SHIH <br> </span>
@@ -36,10 +36,7 @@
 </div>
 
 <div id="scroll_down">
-    <button id="scroll_button">╲╱
-        <!-- <span id="arrow">╲╱</span> -->
-        <!-- <span id="arrow_text">filler text for height lol</span> -->
-    </button>
+    <button id="scroll_button">╲╱</button>
 </div>
 
 
