set headerOffset to 0

--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
     
         <p>
         <span class="section_header" id="skills">skills<br><br> </span>
-        skills:
-        relevant coursework: video game development, machine learning, web systems, operating systems, computer security <br>
+        video game development, machine learning, web systems<br>
         programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
         software: Unity, Solidworks <br>
 
         <br><br>
         interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
-        foreign languages: mandarin chinese, french, japanese, korean (fun fact: i learned a decent amount of japanese and korean from watching tv shows!) <br>
+        foreign languages: mandarin chinese, french, japanese, korean (i learned a decent amount of japanese and korean from watching tv shows!) <br>
     </p>
 
 
