--- a/index.html
+++ b/index.html
@@ -69,16 +69,13 @@
     <p>
         <span class="section_header" id="projects">projects <br><br> </span>
         Personal Website <br>
-        Sep 2020 <br>
-        built with: HTML/CSS, Javascript, php <br><br>
+        built with: HTML/CSS, Javascript <br><br>
 
-        Video Game Portfolio <br>
-        Jan – Apr 2020 <br>
-        built with: C# and Unity Game Engine <br>
+        Video Game Portfolio Website<br>
+        built with: HTML/CSS, Javascript <br>
         built three games: remastered Legend of Zelda, mini game, collaborative game <br><br>
         
         EZscan <br>
-        June 2019 <br>
         built with: swift <br>
         a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet
     </p>
