--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
+        *insert resume link*
         
         <br><br>
     </p>
