--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <span class="section_header" id="skills">skills<br><br> </span>
         video game development, machine learning, web systems<br>
         programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
-        software: Unity, Solidworks <br>
+        tools: git/github, docker<br>
+        software: Unity, Solidworks, Adobe Premiere & Lightroom, Blender?<br>
 
         <br><br>
         </p>
