--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <body>
-    <div class="section"></div>
+    <div class="section">
         <img src="profilepic.jpg" class="profilepic" ></img>
         <span class="section_header" id="about me">hi there! <br><br> </span>
 
