--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         © Deanna Shih 2021
         <img src="heart.gif"/>
         <img src="pig.gif"/>
+        <img src="leaf.gif"/>
     </footer>
 
 </body>
