--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     bse computer science <br>
     university of michigan '20
     </span>
+    <img src="leaf.gif" id="leaf_gif"/>
 </div>
 
 <div id="scroll_down">
@@ -114,7 +115,6 @@
         © Deanna Shih 2021
         <img src="heart.gif"/>
         <img src="pig.gif"/>
-        <img src="leaf.gif"/>
     </footer>
 
 </body>
