used the wrong selector ooops

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     bse computer science <br>
     university of michigan '20
     </span>
-    <img src="leaf.gif" id="leaf_gif"/>
+    <img src="leaf.gif" id="leaf_gif">
 </div>
 
 <div id="scroll_down">
@@ -42,7 +42,7 @@
 
 
 <body>
-    <img src="profilepic.jpg" class="profilepic" ></img>
+    <img src="profilepic.jpg" class="profilepic" >
 
     <div class="section">
         <span class="section_header" id="about me">hi there! <br><br> </span>
