--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <span id="name"> DEANNA SHIH <br> </span>
     <span id="subname">
     bse computer science <br>
-    university of michigan '20
+    university of michigan '20<br>
     </span>
     <img src="leaf.gif" id="leaf_gif">
 </div>
