--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
     <link rel="icon" href="pig.png">
 </head>
 
-<!-- <div id="navbar">
+<div id="navbar">
 <nav>
     <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#about me" id="">about me</a>
-    <a href="#skills">skills</a>
+    <a href="#about me" id="">about</a>
     <a href="#projects">projects</a>
     <a href="#contact">contact</a>
 </nav>
-</div> -->
+</div>
 
 <div class="banner">
     <span id="name"> DEANNA SHIH <br> </span>
@@ -33,7 +32,11 @@
     bse computer science <br>
     university of michigan '20<br>
     </span>
-    <img src="leaf.gif" id="leaf_gif">
+    <img src="/assets/leaf.gif" id="leaf_gif">
+    <img src="/assets/heart1.gif" id="heart1_gif">
+    <img src="/assets/heart2.gif" id="heart2_gif">
+    <img src="/assets/heart3.gif" id="heart3_gif">
+    <img src="/assets/musicnote.gif" id="musicnote_gif">
 </div>
 
 <div id="scroll_down">
@@ -113,8 +116,8 @@
 
     <footer>
         © Deanna Shih 2021
-        <img src="heart.gif"/>
-        <img src="pig.gif"/>
+        <img src="/assets/heart.gif"/>
+        <img src="/assets/pig.gif"/>
     </footer>
 
 </body>
