--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     university of michigan '20<br>
     </span>
     <img src="/assets/leaf.gif" id="leaf_gif">
+    <img src="/assets/leaf2.gif" id="leaf2_gif">
     <img src="/assets/heart1.gif" id="heart1_gif">
     <img src="/assets/heart2.gif" id="heart2_gif">
     <img src="/assets/heart3.gif" id="heart3_gif">
