--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <img src="/assets/heart2.gif" id="heart2_gif">
     <img src="/assets/heart3.gif" id="heart3_gif">
     <img src="/assets/musicnote.gif" id="musicnote_gif">
+    <img src="/assets/computer.gif" id="computer_gif">
 </div>
 
 <div id="scroll_down">
