--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </span>
     <img src="/assets/leaf.gif" id="leaf_gif">
     <img src="/assets/leaf2.gif" id="leaf2_gif">
-    <img src="/assets/heart1.gif" id="heart1_gif">
-    <img src="/assets/heart2.gif" id="heart2_gif">
-    <img src="/assets/heart3.gif" id="heart3_gif">
+    <!-- <img src="/assets/heart1.gif" id="heart1_gif"> -->
+    <!-- <img src="/assets/heart2.gif" id="heart2_gif"> -->
+    <!-- <img src="/assets/heart3.gif" id="heart3_gif"> -->
     <img src="/assets/musicnote.gif" id="musicnote_gif">
     <img src="/assets/computer.gif" id="computer_gif">
 </div>
