--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 </div>
 
 <div class="banner">
-    <span id="name"> DEANNA SHIH <br> </span>
+    <span id="name"> DEANNA SHIH <br> 
+        <img src="/assets/computer.gif" id="computer_gif">
+</span>
     <span id="subname">
     bse computer science <br>
     university of michigan '20<br>
@@ -38,7 +40,6 @@
     <!-- <img src="/assets/heart2.gif" id="heart2_gif"> -->
     <!-- <img src="/assets/heart3.gif" id="heart3_gif"> -->
     <img src="/assets/musicnote.gif" id="musicnote_gif">
-    <img src="/assets/computer.gif" id="computer_gif">
 </div>
 
 <div id="scroll_down">
