--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <div class="banner">
     <span id="name"> DEANNA SHIH <br> 
+        <img src="/assets/gudetama.gif" id="gudetama_gif">
         <img src="/assets/leaf.gif" id="leaf_gif">
         <img src="/assets/leaf2.gif" id="leaf2_gif">
         <img src="/assets/computer.gif" id="computer_gif">
