--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <img src="/assets/leaf2.gif" id="leaf2_gif">
         <img src="/assets/computer.gif" id="computer_gif">
         <img src="/assets/musicnote.gif" id="musicnote_gif">
+        <img src="/assets/camera.gif" id="camera_gif">
 </span>
     <span id="subname">
     bse computer science <br>
