--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
 
 <body>
-    <img src="profilepic.jpg" class="profilepic" >
+    <img src="profilepic.jpg" class="profilepic">
+    <img src="/assets/frame.gif" class="profilepic">
 
     <div class="section">
         <span class="section_header" id="about me">hi there! <br><br> </span>
