--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
     <!-- <img src="/assets/heart1.gif" id="heart1_gif"> -->
     <!-- <img src="/assets/heart2.gif" id="heart2_gif"> -->
     <!-- <img src="/assets/heart3.gif" id="heart3_gif"> -->
+    <button id="scroll_button">╲╱</button>
+
 </div>
 
-<div id="scroll_down">
-    <button id="scroll_button">╲╱</button>
-</div>
+<!-- <div id="scroll_down">
+</div> -->
 
 
 <body>
