--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 </div>
 
 <div class="banner">
-    <span id="name"> DEANNA SHIH <br> 
-</span>
+    <span id="name"> DEANNA SHIH <br> </span>
     <span id="subname">
     bse computer science <br>
     university of michigan '20<br>
@@ -43,11 +42,7 @@
     <!-- <img src="/assets/heart2.gif" id="heart2_gif"> -->
     <!-- <img src="/assets/heart3.gif" id="heart3_gif"> -->
     <button id="scroll_button">╲╱</button>
-
 </div>
-
-<!-- <div id="scroll_down">
-</div> -->
 
 
 <body>
