--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span class="section_header" id="about me">hi there! <br><br> </span>
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.<br><br>
-        <button type="button" onclick="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing">Resumé</button>
+        <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing"><button type="button">Resumé</button></a>
         <br><br>
     </div>
     
