--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     university of michigan '20<br>
     </span>
     <img src="/assets/gudetama.gif" id="gudetama_gif">
-    <img src="/assets/leaf.gif" id="leaf_gif">
-    <img src="/assets/leaf2.gif" id="leaf2_gif">
+    <!-- <img src="/assets/leaf.gif" id="leaf_gif"> -->
+    <!-- <img src="/assets/leaf2.gif" id="leaf2_gif"> -->
     <img src="/assets/computer.gif" id="computer_gif">
     <img src="/assets/musicnote.gif" id="musicnote_gif">
     <img src="/assets/camera.gif" id="camera_gif">
