--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <img src="/assets/computer.gif" id="computer_gif">
     <img src="/assets/musicnote.gif" id="musicnote_gif">
     <img src="/assets/camera.gif" id="camera_gif">
+    <img src="/assets/journal.gif" id="journal_gif">
     <!-- <img src="/assets/heart1.gif" id="heart1_gif"> -->
     <!-- <img src="/assets/heart2.gif" id="heart2_gif"> -->
     <!-- <img src="/assets/heart3.gif" id="heart3_gif"> -->
