--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
         <span class="section_header" id="about me">hi there! <br><br> </span>
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.<br><br>
-        <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank"><button type="button">Resumé</button></a>
+        <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
+            <button type="button" id="resume_button">Resumé</button>
+        </a>
         <br><br>
     </div>
     
