--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         Alternatively, fill out this form right here to send me an email!
     </div>
 
-    <form action="send_email.php"> 
+    <form action="send_email.php" method="POST"> 
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
