--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#about me" id="">about</a>
+    <a href="#about me" onclick="scrollToId('about me')">about</a>
     <a href="#projects">projects</a>
     <a href="#contact">contact</a>
 </nav>
