--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#about me" onclick="scrollToAboutMe()">about</a>
-    <a href="#projects">projects</a>
+    <a href="#" onclick="scrollToAboutMe()">about</a>
+    <a href="#" onclick="scrollToId('projects')">projects</a>
     <a href="#contact">contact</a>
 </nav>
 </div>
