--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#" onclick="scrollToAboutMe()">about</a>
+    <a href="#" onclick="scrollToId('about'">about</a>
     <a href="#" onclick="scrollToId('projects')">projects</a>
-    <a href="#contact">contact</a>
+    <a href="#" onclick="scrollToId('contact')">contact</a>
 </nav>
 </div>
 
@@ -45,7 +45,7 @@
     <img src="profilepic.jpg" class="profilepic">
 
     <div class="section">
-        <span class="section_header" id="about me">hi there! <br><br> </span>
+        <span class="section_header" id="about">hi there! <br><br> </span>
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.<br><br>
         <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
