--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#" onclick="scrollToId('about'">about</a>
+    <a href="#" onclick="scrollToId('about')">about</a>
     <a href="#" onclick="scrollToId('projects')">projects</a>
     <a href="#" onclick="scrollToId('contact')">contact</a>
 </nav>
