--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 
-    <a href="#" onclick="scrollToId('about')">about</a>
-    <a href="#" onclick="scrollToId('projects')">projects</a>
-    <a href="#" onclick="scrollToId('contact')">contact</a>
+    <a href="#" id="navbar_about">about</a>
+    <a href="#" id="navbar_projects">projects</a>
+    <a href="#" id="navbar_contact">contact</a>
 </nav>
 </div>
 
