--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     <div class="section">
         <span class="section_header" id="contact">contact <br><br> </span>
 
-        You can contact me at deannajs@umich.edu. <br>
+        Feel free to send me a message! 
+        
         Alternatively, fill out this form right here to send me an email!
     </div>
 
@@ -101,14 +102,13 @@
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
             reference when the data is submitted -->
-
-        <label for="name">Name</label><br>
+        Hi Deanna, my name is
         <input type="text" id="name" name="name"><br>
 
-        <label for="email">Email</label><br>
-        <input type="text" id="email" name="email"><br>
-
-        <label for="message">Message</label><br>
+        and I can be reached by 
+        <input type="text" id="email" name="email"><br>.
+        
+        I'm because I wanted to say 
         <input type="text" id="message" name="message"><br>
 
         <input type="submit" value="Send Email!">
