--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <div class="section">
         <span class="section_header" id="about">hi there! <br><br> </span>
 
-        My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.<br><br>
+        My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
+        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime" "kdramas"
+
         <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
         </a>
@@ -64,6 +66,7 @@
         programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
         tools: git/github, docker<br>
         software: Unity, Solidworks<br>
+        foreign languages: mandarin chinese, french, japanese, korean
         <br><br>
     </div>
 
@@ -81,12 +84,6 @@
         EZscan <br>
         built with: swift <br>
         a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet
-    </div>
-
-    <br style="clear:both" />
-    <div class="section">
-        interests: piano, cello, carillon, photography/videography, journaling, stationery, pigs <br>
-        foreign languages: mandarin chinese, french, japanese, korean (i learned a decent amount of japanese and korean from watching tv shows!) <br>
     </div>
 
     <div class="section">
@@ -111,7 +108,7 @@
         I'm because I wanted to say 
         <input type="text" id="message" name="message"><br>
 
-        <input type="submit" value="Send Email!">
+        <input type="submit" value="Send">
     </form>
 
     <footer>
