--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span class="section_header" id="about">hi there! <br><br> </span>
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime" "kdramas"
+        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "head empty, no thoughts" "nintendo games" "watching cafe vlogs and mass food production" "cooking to eat"
 
         <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
@@ -89,7 +89,7 @@
     <div class="section">
         <span class="section_header" id="contact">contact <br><br> </span>
 
-        Feel free to send me a message! 
+        Feel free to send me a message
         
         Alternatively, fill out this form right here to send me an email!
     </div>
