--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 	<img src="assets/logo.png" id="logo">
-    <a href="#" onclick="scrollToId('about')">about</a>
+    <a href="#" onclick="scrollToId('about me')">about me</a>
+    <a href="#" onclick="scrollToId('skills')">skills</a>
     <a href="#" onclick="scrollToId('projects')">projects</a>
     <a href="#" onclick="scrollToId('contact')">contact</a>
 </nav>
@@ -46,7 +47,7 @@
     <img src="profilepic.jpg" class="profilepic">
 
     <div class="section">
-        <span class="section_header" id="about">hi there! <br><br> </span>
+        <span class="section_header" id="about me">hi there! <br><br> </span>
 
         My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "head empty, no thoughts" "nintendo games" "watching cafe vlogs and mass food production" "cooking to eat"
