add onclick to html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="assets/musicnote.gif" id="musicnote_gif">
     <img src="assets/camera.gif" id="camera_gif">
     <img src="assets/journal.gif" id="journal_gif">
-  <button id="scroll_button">╲╱</button>
+    <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
 </div>
 
 
