upper right button styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
     </div>
-	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png"></button> 
+	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
     <a href="#" onclick="scrollToId('about me')">about me</a>
     <a href="#" onclick="scrollToId('skills')">skills</a>
     <a href="#" onclick="scrollToId('projects')">projects</a>
