--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
     </div>
-	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
+	<!-- <button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button>  -->
     <a href="#" onclick="scrollToId('about me')">about me</a>
     <a href="#" onclick="scrollToId('skills')">skills</a>
     <a href="#" onclick="scrollToId('projects')">projects</a>
@@ -49,8 +49,9 @@
     <div class="section">
         <span class="section_header" id="about me">hi there! <br><br> </span>
 
-        My name is Deanna and I recently graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "head empty, no thoughts" "nintendo games" "watching cafe vlogs and mass food production" "cooking to eat"
+        My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music in Spring 2020.
+
+        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "emptying my head of thoughts" "nintendo games" "watching cafe vlogs"
 
         <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
