--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </div>
 	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
     <a href="javascript:void()" onclick="scrollToId('about me')">about me</a>
-    <a href="#" onclick="scrollToId('skills')">skills</a>
-    <a href="#" onclick="scrollToId('projects')">projects</a>
-    <a href="#" onclick="scrollToId('contact')">contact</a>
+    <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
+    <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
+    <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
 </nav>
 </div>
 
