hmmm would this work ?

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
-    <a href="javascript:void()" onclick="scrollToId('about me')">about me</a>
+    <button onclick="scrollToId('about me')">about me</button>
     <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
     <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
     <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
