nope that didn't work

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
     <button class = "navbar_link" onclick="scrollToId('about me')">about me</button>
-    <a href="#skills" onclick="scrollToId('skills')">skills</a>
+    <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
     <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
     <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
 </nav>
