--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     university of michigan '20<br>
     </span>
 <!--    <img src="assets/gudetama.gif" id="gudetama_gif">-->
-	<img src="assets/gudetama.png" id="gudetama_img">
+	<div class = "gudetama-container"><img src="assets/gudetama.png" id="gudetama_img"></div>
     <img src="assets/computer.gif" id="computer_gif">
     <img src="assets/musicnote.gif" id="musicnote_gif">
     <img src="assets/camera.gif" id="camera_gif">
