--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </span>
 <!--    <img src="assets/gudetama.gif" id="gudetama_gif">-->
 	<div class = "gudetama-container"><img src="assets/gudetama.png" id="gudetama_img"></div>
-    <img src="assets/computer.gif" id="computer_gif">
-    <img src="assets/musicnote.gif" id="musicnote_gif">
-    <img src="assets/camera.gif" id="camera_gif">
-    <img src="assets/journal.gif" id="journal_gif">
+    <div class= "computer-gif-container"><img src="assets/computer.gif" id="computer_gif"></div>
+    <div class="musicnote-gif-container"><img src="assets/musicnote.gif" id="musicnote_gif"></div>
+    <div class="camera-gif-container"><img src="assets/camera.gif" id="camera_gif"></div>
+    <div class="journal-gif-container"><img src="assets/journal.gif" id="journal_gif"></div>
     <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
 </div>
 
