--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music in Spring 2020.
 
-        I love ... "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "emptying my head of thoughts" "nintendo games" "watching cafe vlogs"
+        I love ... <div id="typing"></div>
+        
+        "playing piano & cello" "bell towers" "film photography" "bullet journaling" "cute stationery" "pigs" "anime and kdramas" "jamming out to music" "zoning out" "gudetama" "psyduck" "emptying my head of thoughts" "nintendo games" "watching cafe vlogs"
 
         <a href="https://drive.google.com/file/d/17VSFlI9VgLoiJI42dS9zayziLwS5VhvT/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
