--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="deanna.js"></script>
 <!-- Load jQuery -->
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
 <head>
     <title>Deanna Shih</title>
