--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
-    <button class = "navbar_link" onclick="scrollToId('about me')">about me</button>
+    <button class = "navbar_link" onclick="scrollToId('about')">about</button>
     <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
     <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
     <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
@@ -39,7 +39,7 @@
     <div class="musicnote-gif-container"><img src="assets/musicnote.gif" id="musicnote_gif"></div>
     <div class="camera-gif-container"><img src="assets/camera.gif" id="camera_gif"></div>
     <div class="journal-gif-container"><img src="assets/journal.gif" id="journal_gif"></div>
-    <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
+    <button id="scroll_button" onclick="scrollToId('about')">╲╱</button>
 </div>
 
 
@@ -47,7 +47,7 @@
     <img src="profilepic.jpg" class="profilepic">
 
     <div class="section">
-        <span class="section_header" id="about me">hi there! <br><br> </span>
+        <span class="section_header" id="about">hi there! <br><br> </span>
 
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music in Spring 2020.
 
