--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 </div>
 
 <div class="banner">
-    <div class= "computer-gif-container"><img src="assets/computer.gif" id="computer_gif"></div>
-    <div class="musicnote-gif-container"><img src="assets/musicnote.gif" id="musicnote_gif"></div>
-    <div class="camera-gif-container"><img src="assets/camera.gif" id="camera_gif"></div>
-    <div class="journal-gif-container"><img src="assets/journal.gif" id="journal_gif"></div>
+    <div class="banner_gifs">
+    <img src="assets/computer.gif" id="computer_gif">
+    <img src="assets/musicnote.gif" id="musicnote_gif">
+    <img src="assets/camera.gif" id="camera_gif">
+    <img src="assets/journal.gif" id="journal_gif">
     <span id="name"> DEANNA SHIH <br> </span>
+    </div>
     <span id="subname">
     bse computer science <br>
     university of michigan '20<br>
