--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
     <div class="section">
         <span class="section_header" id="contact">contact <br><br> </span>
 
-        Feel free to send me a message
+        Feel free to send me a message at deannajs@umich.edu!
         
-        Alternatively, fill out this form right here to send me an email!
+        <!-- Alternatively, fill out this form right here to send me an email! -->
     </div>
 
-    <form action="send_email.php" method="POST"> 
+    <!-- <form action="send_email.php" method="POST"> 
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
@@ -114,7 +114,7 @@
         <input type="text" id="message" name="message"><br>
 
         <input type="submit" value="Send">
-    </form>
+    </form> -->
 
     <footer>
         © Deanna Shih 2021
