--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@
 
         Feel free to send me a message at deannajs@umich.edu!
         
-        <!-- Alternatively, fill out this form right here to send me an email! -->
     </div>
 
-    <!-- <form action="send_email.php" method="POST"> 
+    <!-- <form action="send_email.php" method="POST">  -->
         <!-- What is the name attribute?
             This name attribute can be used to reference the element 
             in a JavaScript. For form elements it is also used as a 
             reference when the data is submitted -->
-        Hi Deanna, my name is
+        <!-- Hi Deanna, my name is
         <input type="text" id="name" name="name"><br>
 
         and I can be reached by 
