--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 <!-- Load jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+<script src="jquery-3.6.0.min.js" type="text/javascript"></script>
 <!-- Load JavaScript -->
 <script type="text/javascript" src="deanna.js"></script>
 
