--- a/index.html
+++ b/index.html
@@ -52,17 +52,16 @@
     <div class="section">
         <span class="section_header" id="about">hi there! <br><br> </span>
 
+        <p>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
 
-        I really like <p id="typing"></p>
+        I really like </p><p id="typing"></p>
         
 
-        <div>
         You can take a peek at my resumé here!: 
         <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
         </a>
-        </div>
         <br><br>
     </div>
     
