does dis work :-:

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
         <p>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
 
-        I really like </p><p id="typing"></p>
+        I really like </p><span id="typing"></span>
         
-
-        You can take a peek at my resumé here!: 
+        <div>
+        Have a 'lil peek at my
         <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank">
             <button type="button" id="resume_button">Resumé</button>
-        </a>
+        </a> !
+        </div>
         <br><br>
     </div>
     
