fuck that didn't work

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <div class="section">
         <span class="section_header" id="about">hi there! <br><br> </span>
 
-        <p>
+        <div>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
 
-        I really like </p><span id="typing"></span>
+        I really like <span id="typing"></span>
+        </div>
         
         <div>
         Have a 'lil peek at my
