--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         I really like <span id="typing"></span>
         </div>
         
-        <div>
+        <div id = "mini-footer">
         Have a 'lil peek at my
         <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank">
-            <button type="button" id="resume_button">Resumé</button>
+            <button type="button" id="resume_button">resumé</button>
         </a> !
         </div>
         <br><br>
