--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <img src="profilepic.jpg" class="profilepic">
 
     <div class="section">
-        <span class="section_header" id="about">hi there :)<br><br> </span>
+        <span class="section_header" id="about">hi there~<br><br> </span>
 
         <div>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
