--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <div id = "mini-footer">
         Have a 'lil peek at my
-        <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank">
+        <a href="https://drive.google.com/file/d/1ZkSacozAPlv7f8XZGjBOE6U5PAUNyjGh/view?usp=sharing" target="_blank" id="resume_link">
             <button type="button" id="resume_button">resumé</button>
         </a> !
         </div>
