doe this fix spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="progress-bar" id="myBar"></div>
     </div>
 	<button id="home_button" onclick="scrollToTop()"> <img src="assets/logo.png" id="logo"></button> 
-    <button class = "navbar_link" onclick="scrollToId('about')">about</button>
+    <a href="javascript:void()" onclick="scrollToId('about me')">about me</button>
     <a href="javascript:void()" onclick="scrollToId('skills')">skills</a>
     <a href="javascript:void()" onclick="scrollToId('projects')">projects</a>
     <a href="javascript:void()" onclick="scrollToId('contact')">contact</a>
@@ -42,7 +42,7 @@
     </span>
 <!--    <img src="assets/gudetama.gif" id="gudetama_gif">-->
 	<div class = "gudetama-container"><img src="assets/gudetama.png" id="gudetama_img"></div>
-    <button id="scroll_button" onclick="scrollToId('about')">╲╱</button>
+    <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
 </div>
 
 
@@ -50,7 +50,7 @@
     <img src="profilepic.jpg" class="profilepic">
 
     <div class="section">
-        <span class="section_header" id="about">hi there!<br><br> </span>
+        <span class="section_header" id="about me">hi there!<br><br> </span>
 
         <div>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
