--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
         <br><br>
-        I really like <span id="typing"></span>
+        I really like <span id="typing"></span>|
         </div>
         
         <div id = "mini-footer">
