--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         EZscan <br>
         built with: swift <br>
-        a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet
+        a mobile app that detects, crops, and stores barcodes from pictures of gift cards into a virtual wallet <br><br>
     
         movie selector <br>
         built with: python <br>
