ummm why didn't the breakpoints there matter??

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <div class="section">
         <span class="section_header" id="projects">projects <br><br> </span>
         [in progress] <br>
-        Video Game Portfolio Website
-        built with: HTML/CSS, Javascript
+        Video Game Portfolio Website<br>
+        built with: HTML/CSS, Javascript <br><br>
         
         Personal Website <br>
         built with: HTML/CSS, Javascript <br><br>
