--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
 
 <body>
-    <img src="profilepic.jpg" class="profilepic">
+    <img src="assets/profilepic.jpg" class="profilepic">
+    <img src="assets/flower.gif">
 
     <div class="section">
         <span class="section_header" id="about">hi there! <br><br> </span>
