--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
 
 <body>
-    <img src="assets/profilepic.jpg" class="profilepic">
-    <img src="assets/flower.gif">
+    <div class="profile pic">
+        <img src="assets/profilepic.jpg" class="profilepic">
+        <img src="assets/flower.gif" id="flower_gif">
+    </div>
 
     <div class="section">
         <span class="section_header" id="about me">hi there!<br><br> </span>
