--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
     <button id="scroll_button" onclick="scrollToId('about me')">╲╱</button>
 </div>
 
-
+<div class="flower_divider">
+    <img src="assets/flower.gif" id="flower_gif">
+    <img src="assets/flower.gif" id="flower_gif">
+    <img src="assets/flower.gif" id="flower_gif">
+</div>
 <body>
     <div class="profile pic">
         <img src="assets/profilepic.jpg" class="profilepic">
-        <img src="assets/flower.gif" id="flower_gif">
     </div>
 
     <div class="section">
