does this work?

--- a/index.html
+++ b/index.html
@@ -87,9 +87,20 @@
 
     <div class="section">
         <span class="section_header" id="skills">skills<br><br> </span>
-        programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
-        software: Unity, Solidworks, Dreamweaver, Premiere<br>
-        foreign languages: mandarin chinese, french, japanese<br>
+        <div class="skills_container">
+            <div class="skills_box">
+            programming languages: c/c++/c#, python, MATLAB, HTML/CSS, Verilog, Javascript, Swift <br>
+            </div>
+
+            <div class="skills_box">
+            software: Unity, Solidworks, Dreamweaver, Premiere<br>
+            </div>
+
+            <div class="skills_box">
+            foreign languages: mandarin chinese, french, japanese<br>
+            </div>
+
+        </div>
         <br><br>
     </div>
     <div class="flower_divider">
@@ -155,7 +166,7 @@
         built with: HTML/CSS, Javascript/jQuery, SQL, python <br>
         from eecs 485 <br><br>
         </div>
-        
+
         </div>
     </div>
     <div class="flower_divider">
