--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div>
         My name is Deanna and I graduated from the University of Michigan with a BSE in Computer Science and a minor in Music.
-        I like creating things with a focus on the user
+        I love creating, and am interested in making user-focused products. 
         <br><br>
         I also like <span id="typing"></span>|
         </div>
